Closed
Bug 41083
Opened 24 years ago
Closed 24 years ago
Signature path not stored correctly when containing non-english characters
Categories
(SeaMonkey :: MailNews: Message Display, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9
People
(Reporter: nplatis, Assigned: alecf)
References
Details
(Keywords: intl)
Attachments
(4 files)
2.63 KB,
patch
|
Details | Diff | Splinter Review | |
4.39 KB,
patch
|
Details | Diff | Splinter Review | |
938 bytes,
patch
|
Details | Diff | Splinter Review | |
6.82 KB,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/4.72 [en] (Win98; U)
BuildID: 2000052208
Reproducible: Always
1. Create a folder whose name contains greek characters (eg. C:\Τα έγγραφά μου\,
which, btw is the name of the "My Documents" folder in Greek Windows 9x).
2. Create a signature file in this directory (eg. sig.txt).
3. For one of your mail accounts, select this file as your signature. The path
initially appears correct in the text box. Click the checkbox to attach this
signature to the messages!
4. Try composing a new message from this account. No signature is attached!!
5. Review Preferences for this mail account. The signature is "C:\¤± ³³?±?¬
???\sig.txt" which is obviously wrong.
6. Now close Mozilla, and hand-edit prefs.js to insert the correct path to the
appropriate preference.
7. Rerun Mozilla, and compose a message. Now the signature is attached
correctly.
It is obvious that Mozilla can correctly interpret the path of the signature
file if it is correctly stored in the preference file.
Unfortunately, it seems that the path as returned from the "Choose a (signature)
file..." dialog is somehow messed-up before being stored in the preferences.
Belong to alec?
cc: kat
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•24 years ago
|
||
Good bug!
Modifying the path names directly may have
worked in Greek but it does not work for multi-byte languages
like Japanese. So I found two issues with Japanese path or
file names.
1. Account Settings does not save the path names properly in UTF-8.
2. Even if we supply the correct path names in UTF-8 in prefs.js,
the signature file is not loaded.
Since any 8-bit characters need to be stored in UTF-8 in prefs.js,
converting into and converting out of pref.js file seems to be
broken.
People attach signature files quite ferquently and not being
to load it properly in different languages warrants nomination for
nsbeta2.
Keywords: nsbeta2
QA Contact: lchiang → momoi
Assignee | ||
Comment 6•24 years ago
|
||
this is turning out to be hard to fix, mainly because nsIFileSpec is not unicode
friendly... so I looked at nsIFile, and it would probably work except that there
is no way to persist a file descriptor with nsIFile the way you can with
nsIFileSpec
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 7•24 years ago
|
||
I've looked into this further, and it really doesn't look like I'll be able to
fix this for nsbeta2 unless I can get some platform people to add a persistant
to the nsIFile interface, which I think is a little risky for beta2.
Removing nsbeta2+ for reconsideration, nominating for nsbeta3
Keywords: nsbeta3
Whiteboard: [nsbeta2+]
Assignee | ||
Updated•24 years ago
|
Target Milestone: M17 → M18
Comment 11•24 years ago
|
||
+ per mail triage. We had called alec about this bug.
Whiteboard: [nsbeta2-] → [nsbeta3+][nsbeta2-]
Comment 12•24 years ago
|
||
Note that Local folder path names and other path names
suffer from the same problem in many different languages.
Assignee | ||
Updated•24 years ago
|
Priority: P3 → P1
Assignee | ||
Updated•24 years ago
|
Priority: P1 → P2
Comment 13•24 years ago
|
||
second pass: - per mail triage
Whiteboard: [nsbeta3+][nsbeta2-] → [nsbeta3-][cut 8/28][nsbeta2-]
Reporter | ||
Comment 14•24 years ago
|
||
Also note that similar problems occur during the profile conversion process by
the Profile Manager: If a 4.x profile is stored in a folder whose pathname
contains Greek characters (I guess it should be non-english, in general), then
it is not converted at all and only an empty folder is created under Users50.
This may be due to the same nsIFile problem mentioned, but I thought I should
report it.
Assignee | ||
Comment 15•24 years ago
|
||
I'll be fixing this as a side effect of fixing 42102
Whiteboard: [nsbeta3-][cut 8/28][nsbeta2-] → [nsbeta3-][cut 8/28][nsbeta2-]Fix in hand
Assignee | ||
Comment 17•24 years ago
|
||
filters/search UI->gayatrib
Assignee: alecf → gayatrib
Status: ASSIGNED → NEW
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M18 → mozilla0.9
Assignee | ||
Comment 19•24 years ago
|
||
Assignee | ||
Comment 20•24 years ago
|
||
Assignee | ||
Comment 21•24 years ago
|
||
Assignee | ||
Comment 22•24 years ago
|
||
removing keyword cruft
Comment 23•24 years ago
|
||
alec, in the first patch, why did you drop the var for the children variable:
- var children = treechildren.childNodes;
+ children = treechildren.childNodes;
was children already defined?
everything else looks good..
sr=mscott
Assignee | ||
Comment 24•24 years ago
|
||
yeah, that was just a warnings fix..
thanks
Comment 25•24 years ago
|
||
r=sspitzer
sorry for the delay.
adding racham to the cc list in case you want him to review / test / land these
mailnews patches for you.
Comment 28•24 years ago
|
||
Reassigning to scottip per Nav Triage Meeting. This is MailNews issue, and Alec
now works in Nav.
Comment 29•24 years ago
|
||
Adding Jenm to cc: list.
Comment 31•24 years ago
|
||
this has a patch, r=, and sr=.. what are we waiting for?
Comment 32•24 years ago
|
||
timeless came up with an updated patch. He's gone to sleep, so I'm attaching it
for him. Could people r=/sr= ?
Comment 33•24 years ago
|
||
Assignee | ||
Comment 34•24 years ago
|
||
thanks guys, sr=alecf
Comment 35•24 years ago
|
||
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Keywords: patch
Resolution: --- → FIXED
Whiteboard: Fix in hand
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•