fix bug 41083 Signature path not stored correctly when containing non-english characters patch by alecf, updated by timeless and bz. r=sspitzer,alecf sr=mscott,alecf